# braidDNA

./: .gitignore  CMakeLists.txt  README.md  angle_adjust.cpp  braid.h  braid_math.cpp  braid_math.h  main.cpp
include/: angle_adjust.h  math_braid.h
src/: main.cpp  math_braid.cpp
unit_test/: test_math.cpp
